Updated project files

--- a/locale/ta/LC_MESSAGES/django.po
+++ b/locale/ta/LC_MESSAGES/django.po
@@ -1,14 +1,14 @@
 # Tamil translations for TourGuidePro
-# Copyright (C) 2026 TourGuidePro
-# This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) 2024
+# This file is distributed under the same license as the TourGuidePro package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: TourGuidePro 1.0\n"
+"Project-Id-Version: TourGuidePro\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-02-08 22:00+0530\n"
-"PO-Revision-Date: 2026-02-08 22:00+0530\n"
-"Last-Translator: TourGuidePro\n"
+"POT-Creation-Date: 2024-01-01 00:00+0000\n"
+"PO-Revision-Date: 2024-01-01 00:00+0000\n"
+"Last-Translator: \n"
 "Language-Team: Tamil\n"
 "Language: ta\n"
 "MIME-Version: 1.0\n"
@@ -16,18 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# Navigation
+#: templates/Home.html
 msgid "Home"
 msgstr "முகப்பு"
 
 msgid "Cab Booking"
-msgstr "கேப் முன்பதிவு"
+msgstr "கேப் பதிவு"
 
 msgid "Hotels"
 msgstr "ஹோட்டல்கள்"
 
 msgid "Destinations"
-msgstr "சுற்றுலா தலங்கள்"
+msgstr "இடங்கள்"
 
 msgid "Itinerary"
 msgstr "பயண திட்டம்"
@@ -35,154 +35,189 @@ msgstr "பயண திட்டம்"
 msgid "Contact"
 msgstr "தொடர்பு"
 
-msgid "Login / Sign Up"
-msgstr "உள்நுழைவு / பதிவு"
-
-msgid "My Bookings"
-msgstr "எனது முன்பதிவுகள்"
-
-msgid "Logout"
-msgstr "வெளியேறு"
-
-msgid "Quick Links"
-msgstr "விரைவு இணைப்புகள்"
-
-msgid "Services"
-msgstr "சேவைகள்"
-
-msgid "Testimonials"
-msgstr "வாடிக்கையாளர் கருத்துகள்"
-
-msgid "Hotel Booking"
-msgstr "ஹோட்டல் முன்பதிவு"
-
-msgid "Cab Services"
-msgstr "கேப் சேவைகள்"
-
-msgid "Travel Guides"
-msgstr "சுற்றுலா வழிகாட்டிகள்"
-
-msgid "Travel Insurance"
-msgstr "சுற்றுலா காப்பீடு"
-
-msgid "Weather Updates"
-msgstr "வானிலை அறிவிப்புகள்"
-
-msgid "Newsletter"
-msgstr "செய்திமடல்"
-
-msgid "Subscribe to get special offers and travel tips."
-msgstr "சிறப்பு சலுகைகள் மற்றும் சுற்றுலா குறிப்புகளைப் பெற சப்ஸ்கிரைப் செய்யவும்."
-
-msgid "Your email"
-msgstr "உங்கள் மின்னஞ்சல்"
-
-msgid "Subscribe"
-msgstr "சப்ஸ்கிரைப் செய்யவும்"
-
-msgid "Privacy Policy"
-msgstr "தனியுரிமைக் கொள்கை"
-
-msgid "Terms of Service"
-msgstr "சேவை விதிமுறைகள்"
-
-# Languages
-msgid "English"
-msgstr "ஆங்கிலம்"
-
-msgid "Hindi"
-msgstr "ஹிந்தி"
-
-msgid "Tamil"
-msgstr "தமிழ்"
-
-msgid "Punjabi"
-msgstr "பஞ்சாபி"
-
-msgid "Bengali"
-msgstr "பெங்காலி"
-
-msgid "Marathi"
-msgstr "மராத்தி"
-
-msgid "Gujarati"
-msgstr "குஜராத்தி"
-
-msgid "Telugu"
-msgstr "தெலுங்கு"
-
-msgid "Kannada"
-msgstr "கன்னடம்"
-
-msgid "Malayalam"
-msgstr "மலையாளம்"
-
-msgid "Urdu"
-msgstr "உருது"
-
-# Home page
 msgid "Plan Your Perfect Trip"
-msgstr "உங்கள் சிறந்த பயணத்தைத் திட்டமிடுங்கள்"
+msgstr "உங்கள் சிறந்த பயணத்தை திட்டமிடுங்கள்"
 
 msgid "Explore destinations, book cabs and hotels, and build your itinerary—all in one place."
-msgstr "சுற்றுலா தலங்களை ஆராயுங்கள், கேப் மற்றும் ஹோட்டல் முன்பதிவு செய்யுங்கள், ஒரே இடத்தில் உங்கள் பயண திட்டத்தை உருவாக்குங்கள்."
+msgstr "இடங்களை ஆராயுங்கள், கேப் மற்றும் ஹோட்டல்களை முன்பதிவு செய்யுங்கள், ஒரே இடத்தில் உங்கள் பயண திட்டத்தை உருவாக்குங்கள்."
 
 msgid "Start Planning"
 msgstr "திட்டமிடத் தொடங்குங்கள்"
 
 msgid "Explore Destinations"
-msgstr "சுற்றுலா தலங்களை ஆராயுங்கள்"
+msgstr "இடங்களை ஆராயுங்கள்"
 
-msgid "🚕 Cab Booking"
-msgstr "🚕 கேப் முன்பதிவு"
+# Feature translations
+msgid "TourGuidePro Features"
+msgstr "டூர்கைட்ப்ரோ அம்சங்கள்"
 
-msgid "🏨 Hotel Finder"
-msgstr "🏨 ஹோட்டல் தேடுபவர்"
+msgid "GPS Tracking"
+msgstr "GPS ட்ராக்கிங்"
 
-msgid "🌍 Destination Info"
-msgstr "🌍 சுற்றுலா தல தகவல்"
+msgid "Weather"
+msgstr "வானிலை"
 
-msgid "🗓️ Smart Itinerary"
-msgstr "🗓️ சாமர்த்திய பயண திட்டம்"
+msgid "Weather Information"
+msgstr "வானிலை தகவல்"
 
-msgid "Popular Destinations"
-msgstr "பிரபலமான சுற்றுலா தலங்கள்"
+msgid "Check weather conditions for your destination before you go."
+msgstr "நீங்கள் செல்வதற்கு முன்பு உங்கள் இடத்தின் வானிலை நிலையை சரிபார்க்கவும்."
 
-msgid "View More"
-msgstr "மேலும் பார்க்க"
+msgid "Enter city name"
+msgstr "நகரத்தின் பெயரை உள்ளிடவும்"
 
-msgid "How It Works"
-msgstr "இது எப்படி செயல்படுகிறது"
+msgid "Get Weather"
+msgstr "வானிலை பெறுங்கள்"
 
-msgid "Choose Destination"
-msgstr "சுற்றுலா தலத்தைத் தேர்ந்தெடுங்கள்"
+msgid "Expense Tracker"
+msgstr "செலவு டிராக்கர்"
 
-msgid "Pick your dream location from curated travel spots."
-msgstr "தேர்ந்தெடுக்கப்பட்ட சுற்றுலா இடங்களில் உங்கள் கனவு இடத்தைத் தேர்ந்தெடுங்கள்."
+msgid "Track all your travel expenses and stay within budget."
+msgstr "உங்கள் அனைத்து பயண செலவுகளையும் கண்காணித்து, பட்ஜெட்டில் இருங்கள்."
 
-msgid "Book Cab & Hotel"
-msgstr "கேப் & ஹோட்டல் முன்பதிவு"
+msgid "Total Spent"
+msgstr "மொத்தம் செலவழித்தது"
 
-msgid "Reserve transportation and stay with trusted partners."
-msgstr "நம்பகமான கூட்டாளிகளுடன் போக்குவரத்தை முன்பதிவு செய்து தங்கவும்."
+msgid "Budget"
+msgstr "பட்ஜெட்"
 
-msgid "Weather & Food Info"
-msgstr "வானிலை & உணவு தகவல்"
+msgid "Remaining"
+msgstr "மீதம்"
 
-msgid "Check forecasts and discover local cuisine highlights."
-msgstr "வானிலை முன்னறிவிப்புகளைச் சரிபார்த்து உள்ளூர் உணவு சிறப்புகளைக் கண்டறியவும்."
+msgid "Select Category"
+msgstr "வகையை தேர்ந்தெடுக்கவும்"
 
-msgid "View Trip Plan"
-msgstr "பயண திட்டத்தைக் காண்க"
+msgid "Transport"
+msgstr "போக்குவரத்து"
 
-msgid "Access your personalized travel plan anytime."
-msgstr "எப்போதும் உங்கள் தனிப்பயனாக்கப்பட்ட பயண திட்டத்தை அணுகவும்."
+msgid "Accommodation"
+msgstr "தங்குமிடம்"
 
-msgid "What Our Users Say"
-msgstr "எங்கள் பயனர்கள் என்ன சொல்கிறார்கள்"
+msgid "Food"
+msgstr "உணவு"
 
-msgid "Your trusted partner for unforgettable travel experiences. We make travel planning simple and enjoyable."
-msgstr "மறக்க முடியாத சுற்றுலா அனுபவங்களுக்கான உங்கள் நம்பகமான கூட்டாளி. சுற்றுலா திட்டமிடுவதை எளிதாகவும் மகிழ்ச்சியாகவும் நாங்கள் செய்கிறோம்."
+msgid "Activities"
+msgstr "செயல்பாடுகள்"
 
-msgid "FAQ"
-msgstr "அடிக்கடி கேட்கப்படும் கேள்விகள்"
+msgid "Shopping"
+msgstr "ஷாப்பிங்"
+
+msgid "Miscellaneous"
+msgstr "இதர"
+
+msgid "Amount"
+msgstr "தொகை"
+
+msgid "Description"
+msgstr "விளக்கம்"
+
+msgid "Add"
+msgstr "சேர்க்க"
+
+msgid "Recent Expenses"
+msgstr "சமீபத்திய செலவுகள்"
+
+msgid "Checklist"
+msgstr "செக்லிஸ்ட்"
+
+msgid "Travel Checklist"
+msgstr "பயண செக்லிஸ்ட்"
+
+msgid "Never forget essentials with our smart packing checklists."
+msgstr "எங்களின் திறமையான பேக்கிங் செக்லிஸ்ட்களுடன் அவசர பொருட்களை மறவாதீர்கள்."
+
+msgid "Quick Templates"
+msgstr "விரைவு டெம்ப்ளேட்கள்"
+
+msgid "Beach Vacation"
+msgstr "கடற்கரை விடுமுறை"
+
+msgid "Mountain Trek"
+msgstr "மலை ஏற்றம்"
+
+msgid "Business Trip"
+msgstr "வணிக பயணம்"
+
+msgid "Swimsuit, sunscreen, and more"
+msgstr "ஸ்விம்சூட், சன்ஸ்கிரீன் மற்றும் பல"
+
+msgid "Hiking gear and essentials"
+msgstr "ஹைகிங் உபகரணங்கள் மற்றும் அவசர பொருட்கள்"
+
+msgid "Professional essentials"
+msgstr "தொழில் நிபுணர் அவசர பொருட்கள்"
+
+msgid "My Checklist"
+msgstr "எனது செக்லிஸ்ட்"
+
+msgid "Add new item"
+msgstr "புதிய பொருளை சேர்க்க"
+
+msgid "Referral"
+msgstr "பரிந்துரை"
+
+msgid "Referral Program"
+msgstr "பரிந்துரை திட்டம்"
+
+msgid "Share with friends and earn rewards on every referral!"
+msgstr " நண்பர்களுடன் பகிர்ந்து ஒவ்வொரு பரிந்துரைக்கும் வெகுமதி பெறுங்கள்!"
+
+msgid "Your Referral Code"
+msgstr "உங்கள் பரிந்துரை குறியீடு"
+
+msgid "Generate Code"
+msgstr "குறியீடு உருவாக்கு"
+
+msgid "Total Referrals"
+msgstr "மொத்த பரிந்துரைகள்"
+
+msgid "Completed"
+msgstr "முடிந்தது"
+
+msgid "Total Earned"
+msgstr "மொத்தம் சம்பாதித்தது"
+
+msgid "Share Your Code"
+msgstr "உங்கள் குறியீட்டை பகிருங்கள்"
+
+msgid "WhatsApp"
+msgstr "வாட்ஸ்அப்"
+
+msgid "Email"
+msgstr "மின்னஞ்சல்"
+
+msgid "Copy Code"
+msgstr "குறியீடு நகல்"
+
+msgid "Apply Referral Code"
+msgstr "பரிந்துரை குறியீடு பயன்படுத்து"
+
+msgid "Enter referral code"
+msgstr "பரிந்துரை குறியீட்டை உள்ளிடவும்"
+
+msgid "Apply"
+msgstr "பயன்படுத்து"
+
+msgid "GPS Map Tracking"
+msgstr "GPS வரைபட ட்ராக்கிங்"
+
+msgid "Track your trips in real-time and never lose your way."
+msgstr "உங்கள் பயணங்களை நிகழ்நேரத்தில் கண்காணித்து, உங்கள் வழியை இழக்காதீர்கள்."
+
+msgid "Start Tracking"
+msgstr "ட்ராக்கிங் தொடங்கு"
+
+msgid "Stop Tracking"
+msgstr "ட்ராக்கிங் நிறுத்து"
+
+msgid "Current Location"
+msgstr "தற்போதைய இடம்"
+
+msgid "Click to get your location"
+msgstr "உங்கள் இடத்தைப் பெற கிளிக் செய்யவும்"
+
+msgid "7-Day Forecast"
+msgstr "7 நாள் முன்னறிவிப்பு"
+
+msgid "Select a template or add items"
+msgstr "டெம்ப்ளேட் தேர்ந்தெடுக்கவும் அல்லது பொருட்களை சேர்க்கவும்"
